# minyma

./: .dockerignore  .drone.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  shell.nix  test.html
minyma/: __init__.py  config.py  normalizer.py  oai.py  plugin.py  vdb.py
minyma/api/: common.py  v1.py
minyma/plugins/: README.md  chroma_db.py  duckduckgo.py  home_assistant.py  vehicle_lookup.py  youtube.py
minyma/templates/: index.html
