[project]
name = "minyma"
version = "0.0.1"
description = "AI Chat Bot with Vector DB Context"
authors = [
  { name = "Evan Reichard", email = "evan@reichard.io" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0",
  "openai==0.28.1",
  "openai[datalib]==0.28.1",
  "tqdm",
  "chromadb",
  "sqlite-utils",
  "click",
  "beautifulsoup4",
  "yt-dlp"
]

[project.scripts]
minyma = "minyma:cli"

[tool.setuptools.packages]
find = {}
